--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,11 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="my_feed">My Feed</string>
+    <string name="friends">My Friends</string>
+    <string name="notifications">Notifications</string>
+    <string name="more">More</string>
+    
 	<string name="parse_app_id">KtEEaus447TpIR7NTGJVQs3Oj982qM2Ccz8oEhke</string>
     <string name="parse_client_key">5tAzG9eU6r1xrUiarLyrw9CbDH8hIZDj9JEqNx0u</string>
     
